--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ body {
   display: block;
   width: 50%;
   margin: auto;
-
 }
 
 .titletext {
@@ -32,7 +31,7 @@ body {
   height: 210px;
   width: 210px;
   border: 9px solid rgb(56, 55, 55);
-  border-radius: 30%;s
+  border-radius: 30%;
 }
 
 .game-over {
